# PortfolioTracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.github/workflows/: lint.yml
alembic/: env.py
alembic/versions/: 1041a34d8090_add_tags_and_comments.py  1b71213d8c1a_add_trade_groups.py  38ceb7030ea7_initial_schema.py  5990bd38093f_add_saved_filters.py  748a3de0c66f_rename_linked_trade_to_trade_lot.py  931768732c0a_make_option_fields_nullable_for_stocks.py  a7f3c2d5e8b1_add_option_support.py  b8c4d6e9f0a2_add_linked_trades.py  c9d5e7f1a3b4_add_previous_close.py  ca8253ea5245_drop_trade_groups_tables.py
app/: config.py  database.py  exceptions.py  logging_config.py  main.py
app/calculations/: __init__.py  pl_calcs.py  position_calcs.py
app/models/: __init__.py  account.py  base.py  comment.py  linked_trade.py  linked_trade_leg.py  lot_transaction.py  position.py  saved_filter.py  security.py  tag.py  trade_group.py  trade_lot.py  transaction.py
app/routers/: accounts.py  analytics.py  api.py  comments.py  linked_trades.py  lots.py  pages.py  saved_filters.py  sync.py  tags.py  trade_groups.py  transactions.py
app/services/: __init__.py  account_service.py  base.py  comment_service.py  filters.py  linked_trade_service.py  lot_service.py  market_data_service.py  metrics_service.py  position_service.py  saved_filter_service.py  snaptrade_client.py  sync_service.py  tag_service.py  trade_group_service.py  transaction_service.py
app/templates/: 404.html  account_positions.html  accounts.html  analytics.html  base.html  index.html  linked_trade_detail.html  linked_trades.html  lot_detail.html  lots.html  settings.html  trade_group_detail.html  trade_groups.html  transaction_detail.html  transactions.html
app/utils/: __init__.py  htmx.py  query_params.py
docs/: IMPLEMENTATION_NOTES.md  PROJECT_PLAN.md  YAHOO_FINANCE_INTEGRATION.md  codebase_analysis.json  onboarding.md
scripts/: backfill_options.py  snaptrade_discovery.py
tests/: conftest.py  test_api.py  test_comments.py  test_filters.py  test_health.py  test_linked_trades.py  test_lot_service.py  test_metrics_service.py  test_options.py  test_positions.py  test_tags.py  test_trade_groups.py  test_transactions.py
(+49 files in other folders)
